client section add

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8410,8 +8410,8 @@ textarea.form-control-lg {
 }
 
 .text-secondary {
-  --bs-text-opacity: 1;
-  color: rgba(var(--bs-secondary-rgb), var(--bs-text-opacity)) !important;
+  
+  color: #23A6F0 !important;
 }
 
 .text-success {
